// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSessionStateFromLocalStorage returns a decoded access token if everything is ok 1`] = `
Object {
  "authenticated": true,
  "user": Object {
    "name": "Rune Storløpa",
    "permissions": undefined,
  },
  "userNotRegistered": false,
}
`;

exports[`getSessionStateFromLocalStorage returns a default initial state if accessToken is not personal 1`] = `
Object {
  "authenticated": false,
  "user": Object {},
  "userNotRegistered": true,
}
`;

exports[`getSessionStateFromLocalStorage returns a default initial state if token is not available in localStorage 1`] = `
Object {
  "authenticated": false,
  "user": Object {},
  "userNotRegistered": true,
}
`;

exports[`useSession nulls all values when logout is called 1`] = `
Object {
  "authenticated": true,
  "login": [Function],
  "logout": [Function],
  "userName": "Rune Storløpa",
  "userNotRegistered": true,
  "userPermissions": Array [
    "",
  ],
}
`;

exports[`useSession nulls all values when logout is called 2`] = `
Object {
  "authenticated": false,
  "login": [Function],
  "logout": [Function],
  "userName": undefined,
  "userNotRegistered": true,
  "userPermissions": undefined,
}
`;

exports[`useSession returns initial state when called with initial values 1`] = `
Object {
  "authenticated": true,
  "login": [Function],
  "logout": [Function],
  "userName": "Rune Storløpa",
  "userNotRegistered": false,
  "userPermissions": undefined,
}
`;

exports[`useSession returns initial state when called without initial values 1`] = `
Object {
  "authenticated": false,
  "login": [Function],
  "logout": [Function],
  "userName": undefined,
  "userNotRegistered": true,
  "userPermissions": undefined,
}
`;
